# Robokit

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  working.html
Python/: robokit.py  robokit_client.py
PythonApp/: fal_background_scan.py  fal_calibration.py  fal_generate_cal_report.py  robokit.py  robokit_client.py  serial_flash.py  stop_watch.py
Scratch/Demo/: app.py
components/hw_drive/: CMakeLists.txt  README.md
components/hw_drive/Tests/: main.c
components/hw_drive/Tests/lib/: _test_unit.h  test_unit.c  test_unit.h
components/hw_drive/docs/: Doxyfile  Report.txt  component.puml  robokit-commands-gui.puml  robokit-commands-hal.puml  robokit-follow-a-line-fsm.puml  robokit-follow-a-line.puml  robokit-hal-fsm.puml  robokit-software-block-diagram.puml  robokit-startup-sequence.puml  robokit-threads.puml  use-cases.puml
components/hw_drive/docs/Examples/: activity.puml
components/hw_drive/include/: buzzer_commands.h  config.h  device.h  drive_command.h  fal_commands.h  imu_commands.h  led_command.h  main_commands.h  robokit_err.h  test_commands.h  timed_commands.h  types.h  ultrasonic_commands.h  values.h  vector.h
components/hw_drive/include/hal/: fal.h  hc_sr04.h  i2c.h  imu.h  pwm_motors.h  scheduler.h  timed_commands_impl.h  voltage_sensor.h
components/hw_drive/include/modules/: robokit_module.h  specs.h
components/hw_drive/include/private/: _modules.h  command_data_containers.h  (+8 more)
components/hw_drive/private_headers/: command_data_containers.h  fal.h  led_strip.h  motor_logic.h  n_lut.h  p_lut.h  pwm_motors.h  robokit_log.h  scheduler.h  sincos.h  vec_motor.h
components/hw_drive/src/: commands.c  device.c  values.c  vector.c
data/: index.html
main/: CMakeLists.txt  README.md  connect_wifi.c  driver.c  driver.h  hc_sr04.c  hc_sr04.h  main.c  pkt_handler.h  socket_server.c  socket_server.h  tcp_command_interpreter.c  tcp_command_interpreter.h  wlan_ap.c  wlan_ap.h
scratch_adapter/: robokit_api.py
(+38 files in other folders)
